# ssec_tutorials

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml
src/ssec_tutorials/: __init__.py  setup.py
src/ssec_tutorials/scipy_conf/: __init__.py  langchain.py  llama.py
tests/: test_setup.py
